--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1 # ✅ 최소한의 커밋만 가져오기
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -47,8 +49,8 @@ jobs:
                 CONTEXT_PATH="."
               fi
               docker buildx build \
-                --cache-from=type=local,src=/tmp/.buildx-cache \
-                --cache-to=type=local,dest=/tmp/.buildx-cache,mode=max \
+              --cache-from=type=gha \
+                --cache-to=type=gha,mode=max \
                 --platform linux/arm64/v8 \
                 --build-arg NEXT_PUBLIC_API_BASE_URL=${{ secrets.NEXT_PUBLIC_API_BASE_URL }} \
                 --build-arg NEXT_PUBLIC_STRIPE_PUBLIC_KEY=${{ secrets.NEXT_PUBLIC_STRIPE_PUBLIC_KEY }} \
@@ -65,6 +67,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1 # ✅ 최소한의 커밋만 가져오기
 
       - name: Configure kubectl
         run: |
@@ -91,11 +95,15 @@ jobs:
         run: |
           kubectl apply -f k8s/configmap.yaml
           kubectl get configmap -n lm-app
+      - name: Get Pods for Debugging
+        run: kubectl get pods -n lm-app
 
       - name: Deploy to OKE
         run: |
+          kubectl rollout restart deployment -n lm-app  # ✅ 기존 배포 유지하면서 업데이트
           bash k8s/deploy.sh
 
       - name: Apply Ingress Configuration
         run: |
           kubectl apply -f k8s/ingress.yaml
+          kubectl get ingress -n lm-app  # ✅ 디버깅용
