--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,10 +5,19 @@ on:
     branches:
       - main
 
+concurrency:
+  group: staging
+  cancel-in-progress: true
+
 jobs:
+  build-and-push:
+    name: build-and-push
+    uses: ./.github/workflows/build_push.yaml
+    secrets: inherit
+  
   deploy:
     runs-on: ubuntu-latest
-    # needs: build-and-push
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -52,4 +61,4 @@ jobs:
       - name: Apply Ingress Configuration
         run: |
           kubectl apply -f k8s/ingress.yaml
-          kubectl get ingress -n lm-app  # ✅ 디버깅용
+          kubectl get ingress -n lm-app 
